resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

[x-cloak] {
    display: none !important;
}

/* All temporary override styles */

.prose > ul > li > :first-child,
.prose > ul > li > :last-child {
    margin: 0px !important;
}

.shiki .highlight {
    background-color: hsl(196, 79%, 26%);
    padding: 3px 0;
}

.shiki .add {
    background-color: #09571c;
    padding: 3px 0;
}

.shiki .del {
    background-color: hsl(354, 77%, 24%);
    padding: 3px 0;
}

.shiki.focus .line:not(.focus) {
    transition: all 250ms;
    filter: blur(2px);
}

.shiki.focus:hover .line {
    transition: all 250ms;
    filter: blur(0);
}

/* #markdownOutput hr {
    border: none !important;
    border-color: transparent !important;
    display: block;
    width: 100%;
    margin-bottom: 2rem;
    height: 12px;
    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='20px' height='12px' viewBox='0 0 20 12' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3e%3cg id='Artboard' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' stroke-linecap='square'%3e%3cpath d='M25,1 C20,1 20,11 15,11 C10,11 10,1 5,1 C0,1 0,11 -5,11 C-10,11 -10,1 -15,1' id='Line' stroke='%23CBD5DF' stroke-width='2'%3e%3c/path%3e%3c/g%3e%3c/svg%3e"); /* Borrowed from AlpineJS docs, need to make my own
} */

.heading-permalink {
    visibility: hidden;
}

h1:hover .heading-permalink,
h2:hover .heading-permalink,
h3:hover .heading-permalink,
h4:hover .heading-permalink,
h5:hover .heading-permalink,
h6:hover .heading-permalink {
    visibility: visible;
}

.heading-permalink {
    position: absolute;
    margin-left: -30px;
    text-decoration: none !important;
    color: rgba(0, 0, 0, 0.4) !important;
    transition: all 0.25s ease;
}

.heading-permalink:hover {
    color: rgba(0, 0, 0, 0.9) !important;
}

/* Inline code blocks */
/* Remove tailwind's prose backticks */
.prose :not(pre) code:before,
.prose :not(pre) code:after {
    content: "" !important;
}

/* Inline code blocks */
.prose :not(pre) code {
    @apply px-2 bg-gray-300 rounded-md inline-block;
}

del code {
    text-decoration-line: line-through;
}

.prose {
    max-width: 80ch !important;
    width: 100% !important;
}

#markdownPreviewOutput .table-of-contents {
    display: none;
}

.prose > ol > li > :last-child,
.prose > ol > li > :first-child {
    margin: 0px !important;
}

/* Loading */
.lds-default {
    display: inline-block;
    position: relative;
    width: 80px;
    height: 80px;
}
.lds-default div {
    position: absolute;
    width: 6px;
    height: 6px;
    background: #fff;
    border-radius: 50%;
    animation: lds-default 1.2s linear infinite;
}
.lds-default div:nth-child(1) {
    animation-delay: 0s;
    top: 37px;
    left: 66px;
}
.lds-default div:nth-child(2) {
    animation-delay: -0.1s;
    top: 22px;
    left: 62px;
}
.lds-default div:nth-child(3) {
    animation-delay: -0.2s;
    top: 11px;
    left: 52px;
}
.lds-default div:nth-child(4) {
    animation-delay: -0.3s;
    top: 7px;
    left: 37px;
}
.lds-default div:nth-child(5) {
    animation-delay: -0.4s;
    top: 11px;
    left: 22px;
}
.lds-default div:nth-child(6) {
    animation-delay: -0.5s;
    top: 22px;
    left: 11px;
}
.lds-default div:nth-child(7) {
    animation-delay: -0.6s;
    top: 37px;
    left: 7px;
}
.lds-default div:nth-child(8) {
    animation-delay: -0.7s;
    top: 52px;
    left: 11px;
}
.lds-default div:nth-child(9) {
    animation-delay: -0.8s;
    top: 62px;
    left: 22px;
}
.lds-default div:nth-child(10) {
    animation-delay: -0.9s;
    top: 66px;
    left: 37px;
}
.lds-default div:nth-child(11) {
    animation-delay: -1s;
    top: 62px;
    left: 52px;
}
.lds-default div:nth-child(12) {
    animation-delay: -1.1s;
    top: 52px;
    left: 62px;
}
@keyframes lds-default {
    0%,
    20%,
    80%,
    100% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.5);
    }
}

